@@ -9,7 +9,7 @@ test "$exec_prefix" = NONE && exec_prefix=$prefix
 
 PACKAGE=mbuffer
 
-VERSION=20010124
+VERSION=20010208
 AC_DEFINE_UNQUOTED(VERSION,"${VERSION}")
 AC_SUBST(VERSION)
 
@@ -54,6 +54,7 @@ AC_HEADER_TIME
 AC_HEADER_STDC
 AC_CHECK_FUNCS(strerror memcpy)
 AC_CHECK_HEADERS(unistd.h memory.h)
+AC_STRUCT_ST_BLKSIZE
 
 AC_ARG_ENABLE(debug,
         --enable-debug            enable verbose logging to console for debugging purpose,
